test/sema/mutate-immutable-this.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

struct Foo {
    var i: int;
    // CHECK: [[@LINE+1]]:23: error: cannot increment immutable value of type 'int'
    def bar() { this.i++; }
}
